# goit-pyweb-hw6

./: .project  connect.py  create-table.sql  create.py  insert.py  main.py  pyproject.toml  query_10.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  tables.sql
